@startuml

class "model.Complexity" {
  + Cognitive: int
  + Cyclomatic: int
  + Lines: int
  + Coverage: float64
}

class "model.Declaration" {
  + Kind: DeclarationKind
  + Type: string
  + File: string
  + Line: int
  + SelfContained: bool
  + Imports: []string
  + References: StringSet
  + Globals: StringSet
  + Doc: string
  + Name: string
  + Names: []string
  + Receiver: string
  + Fields: FieldList
  + Arguments: []string
  + Returns: []string
  + Signature: string
  + Source: string
  + Complexity: *Complexity
  + Equal (in *Declaration) bool
  + GetNames () []string
  + HasName (find string) bool
  + HasReceiver () bool
  + IsExported () bool
  + IsTestScope () bool
  + Keys () []string
  + ReceiverTypeRef () string
  + Ref (pkg *Package) []Ref
  + TypeRef () string
}

class "model.Definition" {
  + Doc: string
  + Module: *Module
  + Imports: StringSet
  + InitCount: int
  + Types: DeclarationList
  + Consts: DeclarationList
  + Vars: DeclarationList
  + Funcs: DeclarationList
  + ClearNonTestFiles ()
  + ClearSource ()
  + ClearTestFiles ()
  + DeclarationList () DeclarationList
  + Fill ()
  + Merge (in *Definition)
  + Order () DeclarationList
  + Sort ()
}

class "model.Field" {
  + Name: string
  + Type: string
  + Path: string
  + Doc: string
  + Comment: string
  + Tag: string
  + JSONName: string
  + MapKey: string
  + TypeRef () string
}

class "model.JSONSchema" {
  + Schema: string
  + Ref: string
  + Definitions: map[string]*JSONSchema
  + Type: string
  + Format: string
  + Pattern: string
  + Properties: map[string]*JSONSchema
  + Items: *JSONSchema
  + Enum: []any
  + Required: []string
  + Description: string
  + Minimum: *float64
  + Maximum: *float64
  + ExclusiveMinimum: *bool
  + ExclusiveMaximum: *bool
  + MultipleOf: *float64
  + AdditionalProperties: any
}

class "model.Module" {
  + Path: string
  + GoVersion: string
  + Toolchain: string
  + Requires: []Require
  + Replaces: []Replace
}

class "model.Package" {
  + ID: string
  + Package: string
  + ImportPath: string
  + Path: string
  + TestPackage: bool
  + Complexity: *Complexity
  + Pkg: *packages.Package
  + Equal (in Package) bool
  + Name () string
  + Namespace (suffix string) string
  + String () string
}

class "model.Ref" {
  + Package: *Package
  + Receiver: string
  + Name: string
  + String () string
}

class "model.Replace" {
  + Path: string
  + Version: string
  + NewPath: string
  + NewVersion: string
}

class "model.Require" {
  + Path: string
  + Version: string
  + Indirect: bool
}


"model.Declaration" --> "model.DeclarationKind" : .Kind
"model.Declaration" --> "model.StringSet" : .References
"model.Declaration" --> "model.StringSet" : .Globals
"model.Declaration" --> "model.FieldList" : .Fields
"model.Declaration" --> "model.Complexity" : .Complexity

"model.Definition" --|> "model.Package" : embeds
"model.Definition" --> "model.Module" : .Module
"model.Definition" --> "model.StringSet" : .Imports
"model.Definition" --> "model.DeclarationList" : .Types
"model.Definition" --> "model.DeclarationList" : .Consts
"model.Definition" --> "model.DeclarationList" : .Vars
"model.Definition" --> "model.DeclarationList" : .Funcs


"model.JSONSchema" --> "model.JSONSchema" : .Definitions
"model.JSONSchema" --> "model.JSONSchema" : .Properties
"model.JSONSchema" --> "model.JSONSchema" : .Items
"model.JSONSchema" --> "model.any" : .Enum
"model.JSONSchema" --> "model.any" : .AdditionalProperties

"model.Module" --> "model.Require" : .Requires
"model.Module" --> "model.Replace" : .Replaces

"model.Package" --> "model.Complexity" : .Complexity

"model.Ref" --> "model.Package" : .Package




@enduml
